@@ -8,7 +8,7 @@ statements, you will need PHP 4.0.4 or later, which requires the use of
 get_defined_vars() function. Some versions of Windows 2k have a problem with
 flock(). Comment out the flock() command in _write_file to get around this.
 
-To be absolutely safe, use 4.0.4pl or later with Smarty.
+To be absolutely safe, use 4.0.6 or later with Smarty.
 
 Smarty versions previous to 2.0 require the PEAR libraries. Be sure to include
 the path to the PEAR libraries in your php include_path. Config_file.class.php
